fix images on ios

--- a/src/components/CopyrightSlide/CopyrightSlide.css
+++ b/src/components/CopyrightSlide/CopyrightSlide.css
@@ -15,3 +15,9 @@
 	text-decoration: none;
 	color: white;
 }
+
+@media screen and (orientation:portrait) and (max-width:720px) {
+	.copyrightSlide {
+		height: 20%;
+	}
+}
